# victron_ble

./: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
docs/: README.md
examples/: bluetooth.rs  example.rs
src/: bit_reader.rs  err.rs  lib.rs  linux.rs  macos.rs  record.rs
src/ble_client/: linux.rs  macos.rs  mod.rs
src/bluetooth/: linux.rs  macos.rs  mod.rs
src/model/: ac_charger_state.rs  alarm_reason.rs  battery_monitor_state.rs  device_state.rs  error_state.rs  inverter_state.rs  mod.rs  mode.rs  solar_charger_state.rs  test_record_state.rs  ve_bus_state.rs
