[package]
name = "victron_ble"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/felixwatts/victron_ble"
description = "Read data from Victron devices over Bluetooth Low Energy."
license = "MIT"
readme = "README.md"
keywords = ["Victron", "BLE", "bluetooth"]
exclude = ["extra-manufacturer-data-2022-12-14.pdf"]

[dependencies]
aes = "0.8.4"
ctr = "0.9.2"
thiserror = "2.0.11"
num_enum = "0.7.3"
strum = { version = "0.26.3", features = ["derive"] }
block-padding = "0.3.3"
serde = { version = "1.0.217", optional = true, features = ["derive"]}
tokio = { version =  "1.43.0", features=["sync", "rt"] }
tokio-stream = { version = "0.1.17" }

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17.3", features=["bluetoothd"] }

[target.'cfg(target_os = "macos")'.dependencies]
bluest = { version = "0.6.7" }

[dev-dependencies]
hex = "0.4"
tokio = { version =  "1.40.0", features=["full"] }

[features]
serde = ["dep:serde"]
