[package]
name = "victron_ble"
version = "0.7.0"
edition = "2021"
repository = "https://github.com/felixwatts/victron_ble"
description = "Read data from Victron devices over Bluetooth Low Energy."
license = "MIT"
readme = "README.md"
keywords = ["Victron", "BLE", "bluetooth"]
exclude = ["docs"]

[dependencies]
aes = { version = "0.8.4", default-features = false }
ctr = { version = "0.9.2", default-features = false }
thiserror = { version = "2.0.16", default-features = false }
num_enum = { version = "0.7.4", default-features = false }
strum = { version = "0.27.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.225", optional = true, features = ["derive"]}
bitflags = { version = "2.9.3", default-features = false }
tokio = { version =  "1.47.1", features = ["rt", "rt-multi-thread", "macros"], optional = true }
tokio-stream = { version = "0.1.17", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17.4", features=["bluetoothd"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
bluest = { version = "0.6.9", optional = true }

[dev-dependencies]
hex = "0.4"

[features]
default = ["bluetooth"]
serde = ["dep:serde", "bitflags/serde"]
bluetooth = ["dep:bluer", "dep:bluest", "dep:tokio", "dep:tokio-stream"]
